# coverage-search

./: .gitmodules  CMakeLists.txt  README.md  experiments.py
src/: ARGoS.conf  CMakeLists.txt
src/configurations/: CMakeLists.txt
src/configurations/cellular_decomposition/: CMakeLists.txt  cellular_decomposition.argos
src/configurations/dynamic_mbfo/: CMakeLists.txt  dynamic_mbfo.argos
src/configurations/mbfo/: CMakeLists.txt  mbfo.argos
src/configurations/pso/: CMakeLists.txt  pso.argos
src/configurations/random/: CMakeLists.txt  random.argos  random.json
src/configurations/random_with_grid/: CMakeLists.txt  random_with_grid.argos
src/configurations/random_with_ids/: CMakeLists.txt  random_with_ids.argos
src/configurations/random_with_voronoi/: CMakeLists.txt  random_with_voronoi.argos
src/controllers/: CMakeLists.txt
src/controllers/cellular_decomposition/: CMakeLists.txt  Cellular.cpp  Cellular.h
src/controllers/mbfo_controller/: CMakeLists.txt  Mbfo.cpp  Mbfo.h  RandomMovement.cpp
src/controllers/pso/: CMakeLists.txt  PsoController.cpp  PsoController.h
src/controllers/random_controller/: CMakeLists.txt  Mbfo.h  RandomMovement.cpp  RandomMovement.h
src/controllers/target_controller/: CMakeLists.txt  Target.cpp  Target.h
src/loop_functions/: CMakeLists.txt  CalculateVoronoi.cpp  CalculateVoronoi.h  CellularDecomposition.cpp  CellularDecomposition.h  ClosestDistance.cpp  ClosestDistance.h  CoverageCalculator.cpp  CoverageCalculator.h  CoverageGridDrawer.cpp  DynamicMbfoLoopFunction.h  MbfoDrawer.cpp  MbfoDrawer.h  MbfoLoopFunction.cpp  MbfoLoopFunction.h  RobotsIdsDrawer.cpp  RobotsIdsDrawer.h  ShowRobotsIds.cpp  ShowRobotsIds.h  VoronoiCalculator.cpp  VoronoiCalculator.h  VoronoiDrawer.cpp  VoronoiDrawer.h  add_loop_lib.cmake  add_qt_loop_lib.cmake
src/loop_functions/cellular_decomposition/: CMakeLists.txt  CellularDecomposition.cpp  CellularDecomposition.h  CellularDrawer.cpp  CellularDrawer.h
src/loop_functions/coverage/: CMakeLists.txt  CoverageCalculator.h  CoverageGridDrawer.h
src/loop_functions/mbfo/: CMakeLists.txt  DynamicMbfoLoopFunction.cpp  MbfoLoopFunction.cpp  MbfoLoopFunction.h
src/loop_functions/pso/: CMakeLists.txt  ClosestDistance.cpp  ClosestDistance.h
src/loop_functions/robots_ids/: CMakeLists.txt  RobotsIdsDrawer.cpp
src/loop_functions/voronoi/: CMakeLists.txt  VoronoiCalculator.h  VoronoiDrawer.cpp  VoronoiDrawer.h
src/robots/: CMakeLists.txt
src/robots/custom-foot-bot/: CMakeLists.txt
src/robots/custom-foot-bot/simulator/: colored_blob_perspective_camera_default_sensor.cpp  colored_blob_perspective_camera_default_sensor.h  dynamics2d_footbot_model.cpp  dynamics2d_footbot_model.h  footbot_entity.cpp  footbot_entity.h  qtopengl_footbot.cpp  qtopengl_footbot.h
src/utils/: CMakeLists.txt  CoverageGrid.cpp  CoverageGrid.h  Task.h  TasksTypes.h  VoronoiCell.cpp  VoronoiCell.h  VoronoiDiagram.cpp  VoronoiDiagram.h  liang-barsky.cpp
src/utils/coverage/: CMakeLists.txt  CoverageCell.h
src/utils/math/: CMakeLists.txt  liang-barsky.h
src/utils/task/: BehaviorFactory.cpp  BehaviorFactory.h  CMakeLists.txt  ControllerBehavior.cpp  ControllerBehavior.h  ExplorerBehavior.cpp  ExplorerBehavior.h  IdleBehavior.h  LeftExplorerBehavior.cpp  LeftExplorerBehavior.h  ReebEdge.cpp  ReebEdge.h  ReebGraph.cpp  ReebGraph.h  RightExplorerBehavior.cpp  RightExplorerBehavior.h  SweeperBehavior.h  Task.cpp  Task.h  TaskCell.cpp  TaskCell.h  TaskHandler.h  TaskManager.cpp  TaskManager.h
src/utils/task/behaviors/: AvoidObstacleBehavior.cpp  AvoidObstacleBehavior.h  ControllerBehavior.cpp  ControllerBehavior.h  ExplorerBehavior.cpp  ExplorerBehavior.h  IdleBehavior.h  LeftExplorerBehavior.cpp  LeftExplorerBehavior.h  RightExplorerBehavior.cpp  RightExplorerBehavior.h  SweeperBehavior.cpp  SweeperBehavior.h
src/utils/voronoi/: CMakeLists.txt  VoronoiDiagram.cpp  VoronoiDiagram.h
